--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,36 @@
 alembic==1.4.2
+appnope==0.1.0
 astroid==2.4.1
 autopep8==1.5.2
+backcall==0.1.0
 click==7.1.2
+decorator==4.4.2
 flake8==3.8.2
 Flask==1.1.2
 Flask-Login==0.5.0
 Flask-Migrate==2.5.3
+flask-shell-ipython==0.4.1
 Flask-SQLAlchemy==2.4.3
 Flask-WTF==0.14.3
 importlib-metadata==1.6.0
+ipython==7.15.0
+ipython-genutils==0.2.0
 isort==4.3.21
 itsdangerous==1.1.0
+jedi==0.17.0
 Jinja2==2.11.2
 lazy-object-proxy==1.4.3
 Mako==1.1.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
+parso==0.7.0
+pexpect==4.8.0
+pickleshare==0.7.5
+prompt-toolkit==3.0.5
+ptyprocess==0.6.0
 pycodestyle==2.6.0
 pyflakes==2.2.0
+Pygments==2.6.1
 pylint==2.5.2
 pylint-flask==0.6
 pylint-plugin-utils==0.6
@@ -26,7 +39,9 @@ python-editor==1.0.4
 six==1.15.0
 SQLAlchemy==1.3.17
 toml==0.10.1
+traitlets==4.3.3
 typed-ast==1.4.1
+wcwidth==0.1.9
 Werkzeug==1.0.1
 wrapt==1.12.1
 WTForms==2.3.1
