--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ autopep8==1.5.2
 backcall==0.1.0
 click==7.1.2
 decorator==4.4.2
+dnspython==1.16.0
+email-validator==1.1.1
 flake8==3.8.2
 Flask==1.1.2
 Flask-Login==0.5.0
@@ -12,6 +14,7 @@ Flask-Migrate==2.5.3
 flask-shell-ipython==0.4.1
 Flask-SQLAlchemy==2.4.3
 Flask-WTF==0.14.3
+idna==2.9
 importlib-metadata==1.6.0
 ipython==7.15.0
 ipython-genutils==0.2.0
